--- a/src/components/css/SearchBar.css
+++ b/src/components/css/SearchBar.css
@@ -18,3 +18,11 @@ span {
     color: #003cff;
     font-weight: bold;
 }
+
+@media (max-width:358px) {
+    .container {
+        display: flex;
+        align-items: center;
+        text-align: center;
+    }
+}
